--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <hr/>
     <input type="text" name="Comment" id="Comment" placeholder="Type your comment here" height="200pxs">
     <a href="./Appreciation.html"><input type="submit" value="SEND"></a>
-    <h3><a href="./mayipsum.html">About Me</a></h3>
+    <h3>About Me</h3>
     <h3><a href="./birthdayproject/birthday.html">Contact Me</a></h3>
 </body>
-</html>s
+</html>
