--- a/Appreciation.html
+++ b/Appreciation.html
@@ -11,7 +11,7 @@
     <img src="./pics/Pink vases.jpg" height="400pxs" alt="Picture of pink vases">
     <img src="./pics/group photo.jpg" height="400pxs" alt="Picture of friends">
     <p>For more information, contact us at:</p></h3>
-    <h3>My Contact:<i> +234 8165371359</i>, Email: <i>maryalowonle@gmail.com</i>, X:<i>_Mary Alowonle</i></h3>
+    <h3>My Contact:<i> +234 </i>, Email: <i>maryalowonle@gmail.com</i>, X:<i>_Mary Alowonle</i></h3>
     <h3>To go back, use the Button below</h3>
     <a href="./index.html"><input type="button" value="back"></a>
 </body>
