--- a/birthdayproject/birthday.html
+++ b/birthdayproject/birthday.html
@@ -30,6 +30,6 @@
     <h3>
         For directions, check this link <a draggable="false" href="https://maps.app.goo.gl/MnQQXB9jVRwBXvEv9">Google maps</a></h3>
     <h3>RSVP <a href="https://www.eventbrite.com/l/sell-tickets/">here</a></h3>
-    <h3>My Contact:<i> +234 8165371359</i>, Email: <i>maryalowonle@gmail.com</i>, X:<i>_Mary Alowonle</i></h3>
+    <h3>My Contact:<i> +234 </i>, Email: <i>maryalowonle@gmail.com</i>, X:<i>_Mary Alowonle</i></h3>
 </body>
 </html>
