--- a/mayipsum.html
+++ b/mayipsum.html
@@ -16,7 +16,7 @@
             daring caring kind selfless kitchen cake scrub wash teach learn browse research
             romantic flowers love dog pet chicken Garri movies code candycrush Bible travel
             adventure park rollercoaster bungeejumping resort hiking soulmate volunteering
-            outreach IBS hemorrhoids mango vegetables metronidazole poetry spkoen words hair
+            outreach IBS mango vegetables metronidazole poetry spkoen words hair
             journalling missions conferences speaking love guilt pressure books study play
             work call lines treat drugs burns bake saute sugar music cotemporary ballet black
             gospelafrobeat speak podcast forgive save invest walk run marathon joy sudoku
@@ -24,8 +24,8 @@
             cook grill plantains shawarma frenchfries mukbang spicy savoury pain plantains</p>
 
         <p>
-            indulge exempt understand experience kdrama cdrama funkeakindele usa residency surgery 
-            paediatrics oncology medicine masters match march usmle dollars work read anki uworld 
+            indulge exempt understand experience kdrama cdrama funkeakindele residency surgery 
+            paediatrics oncology medicine march code online persistence github mountains doctor work read anki uworld 
             united messi worldcup football lawntennis forward provostcup adrenaline spokenwords april 
             craft books youtube spotify gmail sololearn fitify lunges lectures cinema nocturnal rice 
             immersion meditation introspection alarm resources prettynails feed foodie hotplate spaghetti indomie
